# fastapi-docker-traefik

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
app/: config.py  main.py  models.py
src/api/: main.py
tests/: test_main.py
