[project]
name = "fastapi-docker-traefik"
version = "0.0.1"
authors = [
  { name="Patrick Schlaepfer", email="patrick@schlaepfer.com" },
]
description = "A small example fastapi package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/patrickschlaepfer/fastapi-docker-traefik"
"Bug Tracker" = "https://github.com/patrickschlaepfer/fastapi-docker-traefik/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]